--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 body{
     background-color:#f6f5f5;
+    /* background-image: url("isokuva.png"); */
+    /* background-repeat: no-repeat; */
     margin:0px;
     padding:0px;
 }
@@ -13,7 +15,7 @@ a{
 }
 section{
     width: 100%;
-    height:95vh;
+    /* height:95vh; */
     background-image: url();
     background-repeat: no-repeat;
     background-size: cover;
@@ -115,39 +117,33 @@ nav ul li a{
     width: 90%;
     height: 330px;;
     background-color: #809671;
+    opacity: 0.7;
     border-radius: 20px;
     font-family: calibri;
     font-size: 20px;
     outline: none;
     margin: 0px 10px;
-    box-shadow: 2åx 2px 12px rgba(0,0,0,0.2);
+    padding: 5px 25px;
+    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
 }
 
 
-p1{
+.minusta-container p {
     color: #eef1d7;
-    font-family: calibri;
     font-size: 2vw;
-    position: absolute;
-    left: 13%;
-    top: 105%;
-    transform: translate(-13%, -105%);
- 
 }
 
-p2{
-    color: #eef1d7;
-    font-family: calibri;
-    font-size: 2vw;
-    position: absolute;
-    left: 13%;
-    top: 115%;
-    transform: translate(-13%, -115%);
+.nana {
+    width: 500px;
+    margin: 0 auto;
 }
-.nana{
-    border-radius: 8px;
+
+
+.nana img {
+    border-radius: 18px;
     max-width: 100%;
     height: auto;
+    margin: 5px;
 
 }
 .cvbtn{
@@ -191,7 +187,5 @@ p2{
    left: 100%;
    top: 0%;
    transform: translate(-100%, -0%);
-
-
-
+   z-index: -1;
 }
